--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,15 @@ blinker==1.6.2
 click==8.1.3
 Flask==2.3.2
 Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.0.3
+greenlet==2.0.2
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 pytz==2023.3
 six==1.16.0
+SQLAlchemy==2.0.16
+typing-extensions==4.6.3
 Werkzeug==2.3.6
 zipp==3.15.0
