--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
+alembic==1.11.1
 aniso8601==9.0.1
 blinker==1.6.2
 click==8.1.3
 Flask==2.3.2
+Flask-Migrate==4.0.4
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
 importlib-metadata==6.6.0
+importlib-resources==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.4
 MarkupSafe==2.1.3
 pytz==2023.3
 six==1.16.0
